# screenshockme

./: .dockerignore  .gitignore  Dockerfile  README.md  baml.md  docker-compose.yml  nginx.conf  specification.md
backend/: generate_baml.py  manage.py  pyproject.toml  requirements.txt  run_server.sh
backend/api/: urls.py  views.py
backend/baml_client/: __init__.py  client.py  types.py
backend/baml_src/: analyze_focus.baml  focus_analysis.baml  generators.baml
backend/screenshock/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: HomePage.css  HomePage.js  MonitoringPage.css  MonitoringPage.js  PavlokModal.css  PavlokModal.js
