[project]
name = "screenshock-backend"
version = "0.1.0"
description = "Backend for Screenshock.me - AI-powered focus monitoring"
authors = [
    {name = "Griffin Bishop", email = "griffin@example.com"}
]
dependencies = [
    "django>=4.2.7",
    "django-cors-headers>=4.3.1",
    "baml-py>=0.72.0",
    "requests>=2.31.0",
    "pillow>=10.1.0",
    "gunicorn>=21.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.hatch.build.targets.wheel]
packages = ["screenshock", "api", "baml_client"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "screenshock.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]